--- a/index.html
+++ b/index.html
@@ -4,72 +4,83 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
 
-  <title>Mickaël Marchal</title>
+  <meta name="description" content="Profil et page personnelle de Mickaël Marchal, CTO et développeur full-stack chez Grand Luxury Group.">
+  <meta name="author" content="Mickaël Marchal">
+  <link rel="icon" href="favicon.ico">
 
-  <!-- Bootstrap core CSS -->
+  <title>Mickaël Marchal, CTO + Full Stack geek</title>
+
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:900" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
   <link href="css/styles.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:900|Yanone+Kaffeesatz:700" rel="stylesheet">
 </head>
 
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top hidden">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Project name</a>
-    </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <form class="navbar-form navbar-right">
-        <div class="form-group">
-          <input type="text" placeholder="Email" class="form-control">
-        </div>
-        <div class="form-group">
-          <input type="password" placeholder="Password" class="form-control">
-        </div>
-        <button type="submit" class="btn btn-success">Sign in</button>
-      </form>
-    </div><!--/.navbar-collapse -->
-  </div>
-</nav>
-
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron" id="jumbotron">
-  <div class="navig">
-    <a href="#cv">CV</a>
-    <a href="#item2">Item 2</a>
-    <a href="#item3">Item 3</a>
-    <a href="#item4">Item 4</a>
-  </div>
-  <div class="mask">
+<div class="header" id="header">
+  <nav class="nav-main">
+    <a href="#cv">Profil</a>
+    <a href="#social">Social</a>
+    <a href="#contact">Contact</a>
+  </nav>
+  <nav class="nav-secondary">
+    <a href="#" style="text-align: right">English</a>
+  </nav>
+  <div class="header-title">
     <h1>Mickaël Marchal</h1>
   </div>
 </div>
 
-<div class="container main" id="main">
-
+<div class="main">
+<div class="container">
 
   <div class="row" id="cv">
-    <h1>CTO + full stack geek @ Grand Luxury Group,</h1>
-    <h2>Crée de la valeur pour l'e-commerce depuis 10 ans</h2>
-    <p>Premier employé et unique dev pendant 5 ans &bull; Architecture et réalisation de la plateforme web &bull; Suivi de la production &bull; Optimisation des performances et du taux de transformation &bull; Product Owner et référent métier</p>
-    <p>Grand Luxury Group aujourd'hui : 50 personnes, 3 pays, 80% de croissance annuelle, 30M€ CA, 2e apporteur d'affaires mondial sur Paris, Londres, Milan</p>
+    <div class="col-md-4">
 
+    </div>
+    <div class="col-md-1"></div>
 
-    <p><span>Symfony 3</span> <span>Angular (2+)</span> <span>PHP 7</span> <span>Design d'API REST</span> <span>...</span></p>
+    <div class="col-md-7">
+
+      <h1>CTO + full stack geek &nbsp;&nbsp; <span data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">@ Grand Luxury Group</span>.</h1>
+      <p>Premier salarié et unique dev pendant 5 ans &bull; Conception et réalisation de la platorme technique de la société &bull;
+        Optimisation des performances et du taux de transformation &bull;
+        Product Owner et référent métier.</p>
+      <p>Grand Luxury Group propose à la réservation 450 hôtels d'exception à travers le monde. En 10 ans, et en s'appuyant sur sa plateforme technique, elle est devenue le 2<sup>ème</sup> apporteur d'affaires mondial pour les hôtels de Paris, Londres et Milan &mdash; avec seulement 45 salariés.</p>
+
+      <p>Aujourd'hui je dirige l'équipe R&D et définit la stratégie tech de l'entreprise, sans jamais avoir abandonné mon rôle de développeur web full-stack.</p>
+
+      <p><a href="" class="btn btn-primary">Me contacter</a>
+        <a class="btn btn-default" href="">Télécharger mon CV</a>
+        <a class="btn btn-default" href="https://www.linkedin.com/in/mickaelmarchal/">Profil LinkedIn</a>
+      </p>
+
+    </div>
+
+  </div>
+  <div class="row">
+
+    <h2>Concevoir, comprendre et délivrer le produit, puis l'optimiser en continu</h2>
+    <p>Mon leitmotiv quotidien :</p>
+    <ul>
+      <li>concevoir un produit attractif, efficace et moderne grâce aux technos les plus récentes</li>
+      <li>délivrer le produit avec le meilleur compromis coût/qualité</li>
+      <li>l'améliorer en continu pour en multiplier le retour sur investissement</li>
+      <li>constituer une équipe projet efficace, passionnée, et ambitieuse</li>
+    </ul>
+
+    <h3>Ma trousse à outils :</h3>
+    <p>Technos : <span>Symfony 3</span> <span>Angular (1 et 2+)</span> <span>PHP 7</span> <span>Javascript/ES2016</span> <span>Typescript</span> <span>HTML5/CSS3</span> <span>AMP</span> et plus.</p>
+    <p>Ops : <span>Docker</span> <span>Debian</span> <span>Apache</span> <span>MySQL</span> <span>CI / CD</span> <span>NewRelic</span></p>
+    <p>Savoir-faire : <span>RESTful APIs</span> <span>CRO</span> <span>SEO</span> <span>Caching et CDN</span> <span>SPAs et PWAs</span> <span>Paiement en ligne</span> <span>Test</span></p>
+    <p>Métiers : <span>Architecte</span> <span>Formateur</span> <span>Manager on-site/offshore</span> <span>Product owner</span> <span>Scrum Master</span> <span>Recruteur</span></p>
+
+    <p><a href="" class="btn btn-primary">Me contacter</a>
+      <a class="btn btn-default" href="">Télécharger mon CV</a>
+      <a class="btn btn-default" href="https://www.linkedin.com/in/mickaelmarchal/">Profil LinkedIn</a>
+    </p>
 
     <div class="col-md-3">
       <h3>CV</h3>
@@ -289,6 +300,7 @@
   </footer>
 </div> <!-- /container -->
 
+</div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
@@ -299,19 +311,15 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <script>
-  var $jumbotron = $('#jumbotron'),
-    $main = $("#main"),
+  var $jumbotron = $('#header'),
     $body = $(document.body),
-    $html = $('html');
-  var isScrolled = false;
-
-  var $mask = $('#jumbotron .mask');
-  var $h1 = $('#jumbotron .mask h1');
+    $html = $('html'),
+    $mask = $('#header .header-title'),
+    $h1 = $('#header h1');
 
   $(window).scroll(function () {
 
     var scrollTop = $body.scrollTop() || $html.scrollTop();
-
     var jumbotronProps, maskProps, h1Props;
 
     if(scrollTop <= 30) {
@@ -363,20 +371,10 @@
     $jumbotron.css(jumbotronProps);
     $mask.css(maskProps);
     $h1.css(h1Props);
+  });
 
-
-
-/*
-    if(! isScrolled && $body.scrollTop() > 0 || $html.scrollTop() > 0) {
-      isScrolled = true;
-      $jumbotron.addClass('scrolled');
-      $main.addClass('scrolled');
-    } else if(isScrolled) {
-      isScrolled = false;
-      $jumbotron.removeClass('scrolled');
-      $main.removeClass('scrolled');
-    }
-    */
+  $(function () {
+    $('[data-toggle="popover"]').popover()
   });
 
 </script>
