--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:900|Yanone+Kaffeesatz:700" rel="stylesheet">
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#header">
 
-<!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="header" id="header">
-  <nav class="nav-main">
-    <a href="#cv">Profil</a>
-    <a href="#social">Social</a>
-    <a href="#contact">Contact</a>
+
+<header class="header" id="header">
+  <nav class="nav nav-main">
+    <a href="#cv" id="nav-link-profile">Profil</a>
+    <a href="#social" id="nav-link-social">Social</a>
+    <a href="#contact" id="nav-link-contact">Contact</a>
   </nav>
   <nav class="nav-secondary">
     <a href="#" style="text-align: right">English</a>
@@ -31,7 +31,7 @@
   <div class="header-title">
     <h1>Mickaël Marchal</h1>
   </div>
-</div>
+</header>
 
 <div class="main">
 <div class="container">
@@ -44,15 +44,16 @@
 
     <div class="col-md-7">
 
-      <h1>CTO + full stack geek &nbsp;&nbsp; <span data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">@ Grand Luxury Group</span>.</h1>
+      <h1>CTO + full stack geek &nbsp;&nbsp; @ Grand Luxury Group.</h1>
       <p>Premier salarié et unique dev pendant 5 ans &bull; Conception et réalisation de la platorme technique de la société &bull;
         Optimisation des performances et du taux de transformation &bull;
         Product Owner et référent métier.</p>
-      <p>Grand Luxury Group propose à la réservation 450 hôtels d'exception à travers le monde. En 10 ans, et en s'appuyant sur sa plateforme technique, elle est devenue le 2<sup>ème</sup> apporteur d'affaires mondial pour les hôtels de Paris, Londres et Milan &mdash; avec seulement 45 salariés.</p>
+      <p><a id="glg-details" tabindex="0" role="button" title="Grand Luxury Group">Grand Luxury Group</a>
+        propose à la réservation 450 hôtels d'exception à travers le monde. En 10 ans, et en s'appuyant sur sa plateforme technique, il est devenu le 2<sup>ème</sup> apporteur d'affaires mondial pour les hôtels de Paris, Londres et Milan &mdash; avec seulement 45 salariés.</p>
 
       <p>Aujourd'hui je dirige l'équipe R&D et définit la stratégie tech de l'entreprise, sans jamais avoir abandonné mon rôle de développeur web full-stack.</p>
 
-      <p><a href="" class="btn btn-primary">Me contacter</a>
+      <p><a href="" class="btn btn-primary btn-arrow"><span>Me contacter</span></a>
         <a class="btn btn-default" href="">Télécharger mon CV</a>
         <a class="btn btn-default" href="https://www.linkedin.com/in/mickaelmarchal/">Profil LinkedIn</a>
       </p>
@@ -62,7 +63,7 @@
   </div>
   <div class="row">
 
-    <h2>Concevoir, comprendre et délivrer le produit, puis l'optimiser en continu</h2>
+    <h2>Concevoir, comprendre et délivrer le produit, puis l’optimiser en continu</h2>
     <p>Mon leitmotiv quotidien :</p>
     <ul>
       <li>concevoir un produit attractif, efficace et moderne grâce aux technos les plus récentes</li>
@@ -81,6 +82,15 @@
       <a class="btn btn-default" href="">Télécharger mon CV</a>
       <a class="btn btn-default" href="https://www.linkedin.com/in/mickaelmarchal/">Profil LinkedIn</a>
     </p>
+
+  </div>
+
+  <hr style="border-top:15px solid #05bffc; margin: 30px 0 0 0; position:absolute; width:100%; left:0">
+  <hr style="border-top:15px solid #79caaf; margin: 48px 0 0 0; position:absolute; width:100%; left: 0">
+  <hr style="border-top:15px solid #efd662; margin: 66px 0 30px 0; position:absolute; width:100%; left: 0">
+
+
+  <div class="container" id="social">
 
     <div class="col-md-3">
       <h3>CV</h3>
@@ -104,8 +114,37 @@
 
   </div>
 
-  <h2 id="achievements">Dernières réalisations</h2>
+</div>
 
+<div class="jumbotron">
+
+  <div class="container">
+  <h2 id="contact">Me contacter</h2>
+
+  <p>Vous pouvez également me <a href="https://www.linkedin.com/in/mickaelmarchal/">contacter via LinkedIn</a>.</p>
+
+  <form action="" mathod="post">
+
+    <p>
+      <label for="name">Votre nom</label>
+      <input type="text" name="name" id="name" required />
+    </p>
+    <p>
+      <label for="email">Votre e-mail</label>
+      <input type="email" name="email" id="email" required />
+    </p>
+    <p>
+      <label for="message">Message</label>
+      <textarea name="message" id="message" required></textarea>
+    </p>
+    <p><button type="submit">Envoyer</button></p>
+
+
+  </form>
+  </div>
+</div>
+
+<div class="container">
   <div class="row">
 
     <div class="col-md-6">
@@ -142,172 +181,18 @@
 
   </div>
 
-  <div class="row">
 
-    <div class="col-md-6">
-      <img src="http://via.placeholder.com/350x200">
-      <h2>Velib</h2>
-      <a href="" class="btn">More details</a>
-    </div>
-
-  </div>
-
-
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Stackoverflow</h2>
-    </div>
-    <div class="col-md-1">
-
-    </div>
-    <div class="col-md-7">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View Stackoverflow account &raquo;</a></p>
-    </div>
-  </div>
-
-
-  <div class="row" id="item2">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-  </div>
-
-  <div class="row" id="item3">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-  </div>
-
-  <div class="row" id="item4">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-      <h2>Heading</h2>
-      <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-  </div>
   <hr>
 
   <footer>
-    <p>&copy; 2016 Company, Inc.</p>
+    <p>&copy; 2001-2017 Mickaël Marchal. Tous droits réservés.</p>
   </footer>
-</div> <!-- /container -->
+</div>
 
 </div>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 <script>
@@ -316,6 +201,12 @@
     $html = $('html'),
     $mask = $('#header .header-title'),
     $h1 = $('#header h1');
+
+  var socialOffset, contactOffset;
+  $(window).resize(function () {
+    socialOffset = $("#social").offset().top;
+    contactOffset = $("#contact").offset().top;
+  }).trigger('resize');
 
   $(window).scroll(function () {
 
@@ -371,10 +262,31 @@
     $jumbotron.css(jumbotronProps);
     $mask.css(maskProps);
     $h1.css(h1Props);
-  });
+
+    if(scrollTop > contactOffset - 80) {
+      $('#nav-link-contact').addClass('active');
+      $('#nav-link-profile, #nav-link-social').removeClass('active');
+    } else if(scrollTop > socialOffset - 40) {
+      $('#nav-link-social').addClass('active');
+      $('#nav-link-profile, #nav-link-contact').removeClass('active');
+    } else if(scrollTop > 350) {
+      $('#nav-link-profile').addClass('active');
+      $('#nav-link-social, #nav-link-contact').removeClass('active');
+    } else {
+      $('#nav-link-profile, #nav-link-social, #nav-link-contact').removeClass('active');
+    }
+  }).trigger('scroll');
 
   $(function () {
-    $('[data-toggle="popover"]').popover()
+    $('#glg-details').popover({
+      placement: 'top',
+      trigger: 'hover focus',
+      html: true,
+      content:
+        "<p>Crée en 2007, Grand Luxury Group propose la réservation des plus beaux hôtels du monde, ainsi qu'une gamme de services exclusifs à ses clients, afin de rendre leur voyage inoubliable.</p>"
+      + "<p></p>"
+      + "<p><a href=\"https://www.grandluxuryhotels.com\">Visiter le site &raquo;</a></p>"
+    });
   });
 
 </script>
