improved navigation menu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,18 +16,19 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:900|Yanone+Kaffeesatz:700" rel="stylesheet">
 </head>
 
-<body data-spy="scroll" data-target="#header">
+<body>
 
+<nav class="nav-main">
+  <a class="nav-menu-btn"><span class="glyphicon glyphicon-menu-hamburger"></span></a>
+  <ul class="nav-menu">
+    <li><a href="#cv" id="nav-link-profile">Profil</a></li>
+    <li><a href="#social" id="nav-link-social">Social</a></li>
+    <li><a href="#contact" id="nav-link-contact">Contact</a></li>
+    <li class="language"><a href="">English</a></li>
+  </ul>
+</nav>
 
 <header class="header" id="header">
-  <nav class="nav nav-main">
-    <a href="#cv" id="nav-link-profile">Profil</a>
-    <a href="#social" id="nav-link-social">Social</a>
-    <a href="#contact" id="nav-link-contact">Contact</a>
-  </nav>
-  <nav class="nav-secondary">
-    <a href="#" style="text-align: right">English</a>
-  </nav>
   <div class="header-title">
     <h1>Mickaël Marchal</h1>
   </div>
@@ -37,21 +38,21 @@
 <div class="container">
 
   <div class="row" id="cv">
+
     <div class="col-md-4">
-
+      <img src="http://via.placeholder.com/250x250">
     </div>
-    <div class="col-md-1"></div>
 
-    <div class="col-md-7">
-
+    <div class="col-md-7 .col-md-offset-1">
       <h1>CTO + full stack geek &nbsp;&nbsp; @ Grand Luxury Group.</h1>
-      <p>Premier salarié et unique dev pendant 5 ans &bull; Conception et réalisation de la platorme technique de la société &bull;
+      <p><strong>Premier salarié et unique dev pendant 5 ans &bull; Conception et réalisation de la platorme technique de la société &bull;
         Optimisation des performances et du taux de transformation &bull;
-        Product Owner et référent métier.</p>
+        Product Owner et référent métier.</strong></p>
+
       <p><a id="glg-details" tabindex="0" role="button" title="Grand Luxury Group">Grand Luxury Group</a>
         propose à la réservation 450 hôtels d'exception à travers le monde. En 10 ans, et en s'appuyant sur sa plateforme technique, il est devenu le 2<sup>ème</sup> apporteur d'affaires mondial pour les hôtels de Paris, Londres et Milan &mdash; avec seulement 45 salariés.</p>
 
-      <p>Aujourd'hui je dirige l'équipe R&D et définit la stratégie tech de l'entreprise, sans jamais avoir abandonné mon rôle de développeur web full-stack.</p>
+      <p><strong>Aujourd'hui je dirige l'équipe R&D et définit la stratégie tech de l'entreprise, sans jamais avoir abandonné mon rôle de développeur web full-stack.</strong></p>
 
       <p><a href="" class="btn btn-primary btn-arrow"><span>Me contacter</span></a>
         <a class="btn btn-default" href="">Télécharger mon CV</a>
@@ -59,39 +60,37 @@
       </p>
 
     </div>
-
   </div>
+
+  <h2>Concevoir, comprendre et délivrer le produit, puis l’optimiser en continu</h2>
+  <p>Mon leitmotiv quotidien :</p>
+  <ul>
+    <li>concevoir un produit attractif, efficace et moderne grâce aux technos les plus récentes</li>
+    <li>délivrer le produit avec le meilleur compromis coût/qualité</li>
+    <li>l'améliorer en continu pour en multiplier le retour sur investissement</li>
+    <li>constituer une équipe projet efficace, passionnée, et ambitieuse</li>
+  </ul>
+
+  <h3>Ma trousse à outils :</h3>
+  <p>Technos : <span>Symfony 3</span> <span>Angular (1 et 2+)</span> <span>PHP 7</span> <span>Javascript/ES2016</span> <span>Typescript</span> <span>HTML5/CSS3</span> <span>AMP</span> et plus.</p>
+  <p>Ops : <span>Docker</span> <span>Debian</span> <span>Apache</span> <span>MySQL</span> <span>CI / CD</span> <span>NewRelic</span></p>
+  <p>Savoir-faire : <span>RESTful APIs</span> <span>CRO</span> <span>SEO</span> <span>Caching et CDN</span> <span>SPAs et PWAs</span> <span>Paiement en ligne</span> <span>Test</span></p>
+  <p>Métiers : <span>Architecte</span> <span>Formateur</span> <span>Manager on-site/offshore</span> <span>Product owner</span> <span>Scrum Master</span> <span>Recruteur</span></p>
+
+  <p><a href="" class="btn btn-primary">Me contacter</a>
+    <a class="btn btn-default" href="">Télécharger mon CV</a>
+    <a class="btn btn-default" href="https://www.linkedin.com/in/mickaelmarchal/">Profil LinkedIn</a>
+  </p>
+
+</div>
+
+<hr style="border-top:15px solid #05bffc; margin: 30px 0 0 0; position:absolute; width:100%; left:0">
+<hr style="border-top:15px solid #79caaf; margin: 48px 0 0 0; position:absolute; width:100%; left: 0">
+<hr style="border-top:15px solid #efd662; margin: 66px 0 30px 0; position:absolute; width:100%; left: 0">
+
+<div class="container" id="social">
+
   <div class="row">
-
-    <h2>Concevoir, comprendre et délivrer le produit, puis l’optimiser en continu</h2>
-    <p>Mon leitmotiv quotidien :</p>
-    <ul>
-      <li>concevoir un produit attractif, efficace et moderne grâce aux technos les plus récentes</li>
-      <li>délivrer le produit avec le meilleur compromis coût/qualité</li>
-      <li>l'améliorer en continu pour en multiplier le retour sur investissement</li>
-      <li>constituer une équipe projet efficace, passionnée, et ambitieuse</li>
-    </ul>
-
-    <h3>Ma trousse à outils :</h3>
-    <p>Technos : <span>Symfony 3</span> <span>Angular (1 et 2+)</span> <span>PHP 7</span> <span>Javascript/ES2016</span> <span>Typescript</span> <span>HTML5/CSS3</span> <span>AMP</span> et plus.</p>
-    <p>Ops : <span>Docker</span> <span>Debian</span> <span>Apache</span> <span>MySQL</span> <span>CI / CD</span> <span>NewRelic</span></p>
-    <p>Savoir-faire : <span>RESTful APIs</span> <span>CRO</span> <span>SEO</span> <span>Caching et CDN</span> <span>SPAs et PWAs</span> <span>Paiement en ligne</span> <span>Test</span></p>
-    <p>Métiers : <span>Architecte</span> <span>Formateur</span> <span>Manager on-site/offshore</span> <span>Product owner</span> <span>Scrum Master</span> <span>Recruteur</span></p>
-
-    <p><a href="" class="btn btn-primary">Me contacter</a>
-      <a class="btn btn-default" href="">Télécharger mon CV</a>
-      <a class="btn btn-default" href="https://www.linkedin.com/in/mickaelmarchal/">Profil LinkedIn</a>
-    </p>
-
-  </div>
-
-  <hr style="border-top:15px solid #05bffc; margin: 30px 0 0 0; position:absolute; width:100%; left:0">
-  <hr style="border-top:15px solid #79caaf; margin: 48px 0 0 0; position:absolute; width:100%; left: 0">
-  <hr style="border-top:15px solid #efd662; margin: 66px 0 30px 0; position:absolute; width:100%; left: 0">
-
-
-  <div class="container" id="social">
-
     <div class="col-md-3">
       <h3>CV</h3>
       <p><span class="glyphicon glyphicon-download"></span></p>
@@ -111,40 +110,8 @@
       <h3>StackOverflow</h3>
       <p><span class="glyphicon glyphicon-refresh"></span></p>
     </div>
-
   </div>
 
-</div>
-
-<div class="jumbotron">
-
-  <div class="container">
-  <h2 id="contact">Me contacter</h2>
-
-  <p>Vous pouvez également me <a href="https://www.linkedin.com/in/mickaelmarchal/">contacter via LinkedIn</a>.</p>
-
-  <form action="" mathod="post">
-
-    <p>
-      <label for="name">Votre nom</label>
-      <input type="text" name="name" id="name" required />
-    </p>
-    <p>
-      <label for="email">Votre e-mail</label>
-      <input type="email" name="email" id="email" required />
-    </p>
-    <p>
-      <label for="message">Message</label>
-      <textarea name="message" id="message" required></textarea>
-    </p>
-    <p><button type="submit">Envoyer</button></p>
-
-
-  </form>
-  </div>
-</div>
-
-<div class="container">
   <div class="row">
 
     <div class="col-md-6">
@@ -181,6 +148,38 @@
 
   </div>
 
+
+</div>
+
+<div class="jumbotron">
+
+  <div class="container">
+  <h2 id="contact">Me contacter</h2>
+
+  <p>Vous pouvez également me <a href="https://www.linkedin.com/in/mickaelmarchal/">contacter via LinkedIn</a>.</p>
+
+  <form action="" method="post">
+
+    <p>
+      <label for="name">Votre nom</label>
+      <input type="text" name="name" id="name" required />
+    </p>
+    <p>
+      <label for="email">Votre e-mail</label>
+      <input type="email" name="email" id="email" required />
+    </p>
+    <p>
+      <label for="message">Message</label>
+      <textarea name="message" id="message" required></textarea>
+    </p>
+    <p><button type="submit">Envoyer</button></p>
+
+
+  </form>
+  </div>
+</div>
+
+<div class="container">
 
   <hr>
 
@@ -287,6 +286,19 @@
       + "<p></p>"
       + "<p><a href=\"https://www.grandluxuryhotels.com\">Visiter le site &raquo;</a></p>"
     });
+
+    $('.nav-menu-btn').click(function (e) {
+      e.stopPropagation();
+      $(this).addClass('active');
+      $('.nav-menu').show();
+    });
+
+    $(window).click(function () {
+      $('.nav-menu-btn').removeClass('active');
+      $('.nav-menu').hide();
+    })
+
+
   });
 
 </script>
